plugins {
    id 'java'
}

group 'com.suppergerrie2.websocket'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.github.marianobarrios:tls-channel:0.2.0'

    // https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14
    testCompile group: 'org.slf4j', name: 'slf4j-jdk14', version: '2.0.0-alpha1'
    testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}